--- a/config/typescript-config/package.json
+++ b/config/typescript-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pathos/typescript-config",
+  "name": "@witz/typescript-config",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
