--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,10 +2,14 @@
   "name": "@witz/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/http/server.ts"
   },
   "dependencies": {
-    "@witz/auth": "workspace:*"
+    "@fastify/cors": "^9.0.1",
+    "@witz/auth": "workspace:*",
+    "fastify": "^4.27.0",
+    "fastify-type-provider-zod": "^1.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
