--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@prisma/client": "^5.14.0",
     "@witz/auth": "workspace:*",
     "fastify": "^4.27.0",
     "fastify-type-provider-zod": "^1.2.0",
@@ -16,6 +17,7 @@
     "@witz/eslint-config": "workspace:*",
     "@witz/prettier": "workspace:*",
     "@witz/tsconfig": "workspace:*",
+    "prisma": "^5.14.0",
     "tsx": "^4.11.0"
   },
   "eslintConfig": {
