--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,11 +8,13 @@
     "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.14.0",
     "@witz/auth": "workspace:*",
+    "bcryptjs": "^2.4.3",
     "fastify": "^4.27.0",
     "fastify-type-provider-zod": "^1.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.12",
     "@witz/eslint-config": "workspace:*",
     "@witz/prettier": "workspace:*",
