--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@witz/tsconfig/node.json",
   "include": [
     "src/**/*",
+    "@types/*.d.ts"
   ],
   "compilerOptions": {
     "baseUrl": ".",
