--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,15 +1,10 @@
 {
   "extends": "@witz/tsconfig/node.json",
-  "include": [
-    "src/**/*",
-    "@types/*.d.ts"
-  ],
+  "include": ["src/**/*", "@types/*.d.ts"],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   }
 }
