--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,14 @@
     "env:load": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@casl/react": "^3.1.0",
     "@hookform/resolvers": "^3.5.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-table": "^8.17.3",
+    "@witz/api": "workspace:*",
     "@witz/auth": "workspace:*",
     "@witz/env": "workspace:*",
     "axios": "^1.7.2",
