--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,12 +16,15 @@
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
     "@prisma/client": "^5.14.0",
+    "@types/nodemailer": "^6.4.15",
     "@witz/auth": "workspace:*",
     "@witz/env": "workspace:*",
     "bcryptjs": "^2.4.3",
     "fastify": "^4.27.0",
+    "fastify-mailer": "^2.3.1",
     "fastify-plugin": "^4.5.1",
     "fastify-type-provider-zod": "^1.2.0",
+    "nodemailer": "^6.9.13",
     "zod": "^3.23.8"
   },
   "devDependencies": {
