--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
     "dev": "pnpm env:load next dev",
     "build": "pnpm env:load next build",
     "start": "pnpm env:load next start",
-    "lint": "eslint .",
+    "lint": "next lint",
     "env:load": "dotenv -e ../../.env --"
   },
   "dependencies": {
@@ -23,7 +23,9 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
+    "ky": "^1.3.0",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
@@ -47,6 +49,7 @@
     "@witz/eslint-config": "workspace:*",
     "@witz/prettier": "workspace:*",
     "@witz/tsconfig": "workspace:*",
+    "dotenv-cli": "^7.4.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
