feat: add form for suitability create

--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@witz/tsconfig/library.json",
   "include": [
-    "src/**/*",
+    "src/**/*", "../../apps/api/src/models/profile-type.ts",
   ]
 }
