--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -38,9 +38,10 @@
     "@witz/eslint-config": "workspace:*",
     "@witz/prettier": "workspace:*",
     "@witz/tsconfig": "workspace:*",
-    "prisma": "^5.14.0",
+    "dotenv-cli": "^7.4.2",
     "esbuild": "^0.20.1",
     "esbuild-register": "^3.5.0",
+    "prisma": "^5.14.0",
     "tsup": "^8.1.0",
     "tsx": "^4.11.0"
   },
