--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "turbo build",
     "build:web": "turbo build --filter=web",
     "build:api": "turbo build --filter=api",
+    "start": "turbo start",
     "dev": "turbo dev",
     "lint": "turbo lint"
   },
