--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "turbo build",
     "build:web": "turbo build --filter=web",
     "build:api": "turbo build --filter=api",
-    "start": "turbo start --filter=api",
+    "start:web": "turbo start --filter=web",
+    "start:api": "turbo start --filter=api",
     "dev": "turbo dev",
     "lint": "turbo lint"
   },
