--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "pdf-lib": "1.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
